--- a/contact-app-backend/build.gradle
+++ b/contact-app-backend/build.gradle
@@ -26,5 +26,7 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
