--- a/contact-app-backend/build.gradle
+++ b/contact-app-backend/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
+    implementation('org.projectlombok:lombok:1.18.4')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
